# advent-of-code-2023

./: .gitignore  LICENSE  aoc2023.cabal  get-inputs  package.yaml
app/: Main.hs
src/AoC/: Day1.hs  Day2.hs  Utils.hs
